# PythonModules

Python_00/ex1/: ft_plot_area.py
Python_00/ex3/: ft_plant_age.py
Python_00/ex4/: ft_water_reminder.py
Python_00/ex5/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
Python_00/ex6/: ft_garden_summary.py
Python_00/ex7/: ft_seed_inventory.py
Python_010/: README.md
Python_010/ex0/: lambda_spells.py
Python_010/ex1/: higher_magic.py
Python_010/ex2/: scope_mysteries.py
Python_010/ex3/: functools_artifacts.py
Python_010/ex4/: decorator_mastery.py
Python_04/: README.md
Python_04/ex0/: ft_ancient_text.py
Python_04/ex1/: ft_archive_creation.py
Python_04/ex2/: ft_stream_management.py
Python_04/ex3/: ft_vault_security.py
Python_08/: README.md
Python_08/ex0/: construct.py
Python_08/ex1/: loading.py  pyproject.toml
Python_08/ex2/: .env.example  oracle.py
