[tool.poetry]
name = "matrix-loading"
version = "0.1.0"
description = "I need guns. Lots of guns."
authors = ["<user@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
numpy = "1.25.0"
pandas = "2.1.0"
matplotlib = "3.7.0"
requests = "2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
